swagger for banner
